# MarkItNative

./: .gitignore  README.md  cline_mcp_settings.json  index.html  package-lock.json  package.json
markitdown-app/: .gitignore
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  pdfium.tgz  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  parser.rs  vision_processor.rs
