[package]
name = "markitnative"
version = "1.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "markitnative"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "markitnative_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dependencies]
tauri = { version = "2", features = [] }
pdf-extract = "0.10.0"
dotext = "0.1.1"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
hf-hub = "0.4.3"
image = "0.25.1"
tokenizers = "0.19.1"
pdfium-render = "0.8.21"
[[bin]]
name = "mcp-server"
path = "src/bin/mcp_server.rs"

[profile.release]
codegen-units = 1


